objects/Case.object
<CustomObject>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comune</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comunicazioni_con_OLO__c</fullName>
        <label>Comunicazioni con OLO</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Conta_Rip1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conta Rip1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Conta_Rip2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conta Rip2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referente Tecnico OLO</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.EOF_Account_OLO__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EOF_CreatedDate_FORMULA__c</fullName>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (CreatedDate+ 2/24 ), 19), 
LEFT ( TEXT (CreatedDate+ 1/24), 19) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Appuntamento__c</fullName>
        <label>Data Appuntamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Max_Risoluzione_Ticket__c</fullName>
        <label>Data Max Risoluzione Ticket</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica__c</fullName>
        <label>Data Notifica</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Apertura_Ticket__c</fullName>
        <formula>CreatedDate</formula>
        <label>Data/Ora Apertura Ticket</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Chiusura_Ticket__c</fullName>
        <label>Data/Ora Chiusura Ticket</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Desospensione__c</fullName>
        <label>Data/Ora Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Fine_Rip1__c</fullName>
        <label>Data/Ora Fine Rip1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Fine_Rip2__c</fullName>
        <label>Data/Ora Fine Rip2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Inizio_Guasto__c</fullName>
        <label>Data/Ora Inizio Guasto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Intervento_Congiunto__c</fullName>
        <label>Data/Ora Intervento Congiunto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Richiesta_Annullamento__c</fullName>
        <label>Data/Ora Richiesta Annullamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Sospensione__c</fullName>
        <label>Data/Ora Sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Prevista_Attivazione__c</fullName>
        <label>Data Prevista Attivazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ritorno_In_Lavorazione__c</fullName>
        <label>Data/Ora ritorno in lavorazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Descrizione_Intervento_Risoluzione__c</fullName>
        <label>Descrizione Intervento Risoluzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risolto: Tratta Verticale</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Centrale</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Primaria</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Secondaria</fullName>
                </value>
                <value>
                    <fullName>Non Riscontrato: Senza Uscita</fullName>
                </value>
                <value>
                    <fullName>Non Riscontrato: Con Uscita</fullName>
                </value>
                <value>
                    <fullName>Risolto: Sbraccio</fullName>
                </value>
                <value>
                    <fullName>Risolto: Borchia Ottica</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa Impianto Cliente</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Configurazione CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Reset CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione Bretella Ottica</fullName>
                </value>
                <value>
                    <fullName>Ribaltamento Effettuato</fullName>
                </value>
                <value>
                    <fullName>NON RISOLVIBILE: PROBLEMI RETE OLO (ES. PROBLEMA DI SCHEDA IN CENTRALE OLO, PROBLEMA DI CONFIGURAZIONE OLO)</fullName>
                </value>
                <value>
                    <fullName>NON RISOLVIBILE: PROBLEMI RETE CLIENTE (ES. WI-FI POCO PERFORMANTE CAUSA DISPOSIZIONE CASA CLIENTE, CONFIGURAZIONE PC)</fullName>
                </value>
                <value>
                    <fullName>Risolto Mediante Intervento Congiunto</fullName>
                </value>
                <value>
                    <fullName>CHIUSO PER TIMEOUT_OK</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <isActive>false</isActive>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <isActive>false</isActive>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <isActive>false</isActive>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <isActive>false</isActive>
                    <label>18</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Descrizione_Problema__c</fullName>
        <label>Descrizione Problema</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Desospendi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desospendi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Email_Referente_Tecnico_OLO__c</fullName>
        <formula>EOF_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Referente Tecnico OLO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Fascia_Oraria_Appuntamento__c</fullName>
        <label>Fascia Oraria Appuntamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Fase__c</fullName>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Da lavorare</fullName>
                </value>
                <value>
                    <fullName>Appuntamento Fissato</fullName>
                </value>
                <value>
                    <fullName>Da contattare</fullName>
                </value>
                <value>
                    <fullName>Desospeso</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione</fullName>
                </value>
                <value>
                    <fullName>In Verifica BO</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Sospeso BO</fullName>
                </value>
                <value>
                    <fullName>Sospeso Tecn.</fullName>
                </value>
                <value>
                    <fullName>In assegnazione</fullName>
                </value>
                <value>
                    <fullName>Espletato OK</fullName>
                </value>
                <value>
                    <fullName>Cessato OK</fullName>
                </value>
                <value>
                    <fullName>Cessato KO</fullName>
                </value>
                <value>
                    <fullName>Espletato KO</fullName>
                </value>
                <value>
                    <fullName>Accettato KO</fullName>
                </value>
                <value>
                    <fullName>In Verifica Supporto Vendite</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione Network Creation</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione Delivery</fullName>
                </value>
                <value>
                    <fullName>Completato</fullName>
                </value>
                <value>
                    <fullName>Offerta Creata</fullName>
                </value>
                <value>
                    <fullName>Offerta Presentata</fullName>
                </value>
                <value>
                    <fullName>Richiesta modifica offerta da Cliente</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione Supporto Vendite</fullName>
                </value>
                <value>
                    <fullName>In Attesa Presa In Carico Supporto Vendite</fullName>
                </value>
                <value>
                    <fullName>In Attesa Presa In Carico Referente Fattibilità</fullName>
                </value>
                <value>
                    <fullName>In Attesa Presa In Carico Tecnico Fattibilità</fullName>
                </value>
                <value>
                    <fullName>Sospeso OM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Flag_Pagamento__c</fullName>
        <label>Flag Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_Attestazione__c</fullName>
        <label>GPON Attestazione</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_Vincolante__c</fullName>
        <label>GPON Vincolante</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_ID_Apparato_Consegnato__c</fullName>
        <label>ID Apparato Consegnato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Building_WS__c</fullName>
        <externalId>true</externalId>
        <label>ID Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Splitter_Secondario__c</fullName>
        <label>ID Splitter Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Id_Notifica__c</fullName>
        <label>Id Notifica</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Id_Risorsa__c</fullName>
        <label>Id Risorsa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Identificativo_del_POP__c</fullName>
        <label>Identificativo del POP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Impresa__c</fullName>
        <label>Impresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Indirizzo_WS__c</fullName>
        <label>Indirizzo</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Intervento_Congiunto__c</fullName>
        <label>Intervento Congiunto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Istat_Comune__c</fullName>
        <label>Istat Comune</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Istat_Provincia__c</fullName>
        <label>Istat Provincia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Minuti_rimanenti_sospesi__c</fullName>
        <label>Minuti rimanenti sospesi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Modifica_Data__c</fullName>
        <formula>RIGHT(LEFT(TEXT(LastModifiedDate + (60 / 1440)),10),2)&amp;&apos;/&apos;&amp;RIGHT(LEFT(TEXT(LastModifiedDate + (60 / 1440)),7),2)&amp;&apos;/&apos;&amp;LEFT(TEXT(LastModifiedDate + (60 / 1440)),4) 
&amp;&apos; &apos;&amp;RIGHT(LEFT(TEXT(LastModifiedDate + (60 / 1440)),19),8)</formula>
        <label>Modifica Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Appuntamento__c</fullName>
        <label>Note Appuntamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Interne__c</fullName>
        <label>Note Interne</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Operatore_Analisi__c</fullName>
        <label>Note Operatore Analisi</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Operatore_Collaudo__c</fullName>
        <label>Note Operatore Collaudo</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Operatore__c</fullName>
        <label>Note Operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Operatore_on_Field__c</fullName>
        <label>Note Operatore on Field</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note_Sospensione__c</fullName>
        <label>Note Sospensione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Num_min_risoluzione_Ticket__c</fullName>
        <formula>if(ISBLANK(EOF_Data_Max_Risoluzione_Ticket__c),&apos;0&apos;, TEXT(ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 ,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero minuti alla risoluzione Ticket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Num_sec_risoluzione_Ticket__c</fullName>
        <formula>TEXT(ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero secondi alla risoluzione Ticket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Numero_Civico_WS__c</fullName>
        <label>Numero Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Numero_Operatore__c</fullName>
        <label>Numero operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Numero_Telefonico_Principale_Linea__c</fullName>
        <label>Numero Telefonico Principale Linea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Nuova_DAC_FORMULA__c</fullName>
        <formula>IF ( DATEVALUE(EOF_Nuova_DAC__c) &gt;=
DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(EOF_Nuova_DAC__c) &lt;
DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Nuova_DAC__c)),11,1) - DATE (1900,1,7),7))
),
LEFT ( TEXT (EOF_Nuova_DAC__c+ 2/24 ), 19),
LEFT ( TEXT (EOF_Nuova_DAC__c+ 1/24), 19)
)</formula>
        <label>Nuova DAC FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Nuova_DAC__c</fullName>
        <label>Nuova DAC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Opzione_System_Unico__c</fullName>
        <label>Opzione System Unico</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Orario_Appuntamento__c</fullName>
        <label>Orario Appuntamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Order_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Particella_Toponomastica_WS__c</fullName>
        <label>Particella Toponomastica</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Password_Apparato__c</fullName>
        <label>Password Apparato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Pertinenza_RDAC__c</fullName>
        <label>Pertinenza RDAC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_Splitter_Secondario__c</fullName>
        <label>Posizione Splitter Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Progetto_Speciale__c</fullName>
        <label>Progetto Speciale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Provincia_WS__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Recapito_Telefonico_Cliente_1__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recapito Telefonico Cliente 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Recapito_Telefonico_Cliente_2__c</fullName>
        <formula>Account.EOF_Phone_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recapito Telefonico Cliente 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Recapito_Test_Linea__c</fullName>
        <label>Recapito Test Linea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Referente_desospensione__c</fullName>
        <label>Referente desospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Rip1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rip1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Rip2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rip2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Rischedulazione_Appuntamento__c</fullName>
        <label>Data/Ora Rischedulazione Appuntamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_SLA_Premium_Assurance__c</fullName>
        <label>SLA Premium Assurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Scala_Palazzina_WS__c</fullName>
        <label>Scala Palazzina</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Secondi_sospesi_allo_SLA__c</fullName>
        <label>Secondi sospesi allo SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Building__c</fullName>
        <label>Stato Building</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_SLA__c</fullName>
        <formula>if(AND(OR(ISPICKVAL(Status, &apos;Sospeso&apos;),ISPICKVAL(Status, &apos;Richiesta Chiusura&apos;), EOF_Rischedulazione_Appuntamento__c &gt; now() ), now()&lt;EOF_Data_Max_Risoluzione_Ticket__c) ,&apos;Tempo sospeso alla risoluzione: &apos;&amp;if(FLOOR(EOF_Secondi_sospesi_allo_SLA__c/3600)&gt;0,TEXT(FLOOR(EOF_Secondi_sospesi_allo_SLA__c/3600)) + &apos; ore, &apos;,&apos;&apos;)&amp;TEXT( FLOOR(MOD(EOF_Secondi_sospesi_allo_SLA__c,3600)/60)) + &quot; minuti e &quot; + TEXT(MOD(MOD(EOF_Secondi_sospesi_allo_SLA__c,3600),60))+&apos; secondi&apos; ,
if(AND(ISPICKVAL(Status, &apos;Annullato&apos;),EOF_Data_Max_Risoluzione_Ticket__c&gt;ClosedDate), &apos;Annullato con &apos;&amp;TEXT( EOF_Minuti_rimanenti_sospesi__c) &amp;&apos; minuti allo SLA&apos;,
if(AND(ISPICKVAL(Status, &apos;Annullato&apos;),EOF_Data_Max_Risoluzione_Ticket__c&lt;ClosedDate),&apos;Annullato con &apos;&amp;TEXT( EOF_Minuti_rimanenti_sospesi__c) &amp;&apos; minuti oltre lo SLA&apos;,
if(AND(ISPICKVAL(Status, &apos;Chiuso&apos;),EOF_Data_Max_Risoluzione_Ticket__c&gt;ClosedDate), &apos;Chiuso con &apos;&amp;TEXT( EOF_Minuti_rimanenti_sospesi__c) &amp; &apos; minuti allo SLA&apos;,
if(AND(ISPICKVAL(Status, &apos;Chiuso&apos;),EOF_Data_Max_Risoluzione_Ticket__c&lt;ClosedDate),&apos;Chiuso con &apos;&amp;TEXT( EOF_Minuti_rimanenti_sospesi__c) &amp;&apos; minuti oltre lo SLA&apos;,
if(EOF_Data_Max_Risoluzione_Ticket__c&gt;=NOW(),
&apos;Tempo mancante allo SLA: &apos;&amp;if(FLOOR((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0))/3600)&gt;0,TEXT(FLOOR((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0))/3600)) + &apos; ore, &apos;,&apos;&apos;)&amp;TEXT( FLOOR(MOD((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0)),3600)/60)) + &quot; minuti e &quot; + TEXT(MOD(MOD((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0)),3600),60))+&apos; secondi&apos; ,
&apos;Tempo Oltre lo SLA: &apos;&amp;if(FLOOR((ROUND ((now() - EOF_Data_Max_Risoluzione_Ticket__c ) * 24 * 60 * 60,0))/3600)&gt;0,TEXT(FLOOR((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0))/3600)) + &apos; ore, &apos;,&apos;&apos;)&amp;TEXT( FLOOR(MOD((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0)),3600)/60)) + &quot; minuti e &quot; + TEXT(MOD(MOD((ROUND ((EOF_Data_Max_Risoluzione_Ticket__c - now() ) * 24 * 60 * 60,0)),3600),60))+&apos; secondi&apos; )
)
)
)
)
)</formula>
        <label>Stato SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tec_EOF__c</fullName>
        <label>Tec EOF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tec_Olo__c</fullName>
        <label>Tec Olo</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tel_Tec_EOF__c</fullName>
        <label>Tel Tec EOF</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tel_Tec_Olo__c</fullName>
        <label>Tel_Tec_Olo</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Telefono_Referente_OLO_Onfield_Notec__c</fullName>
        <label>Telefono Referente OLO Onfield Notech</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Telefono_Referente_Tecnico_OLO__c</fullName>
        <formula>EOF_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefono Referente Tecnico OLO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Timeout_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Viene checkato da un workflow dopo 8 ore di apertura</description>
        <label>Timeout OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_di_intervento__c</fullName>
        <label>Tipo di intervento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verticale strutturato e sbraccio</fullName>
                </value>
                <value>
                    <fullName>Sbraccio</fullName>
                </value>
                <value>
                    <fullName>Monofibra interno</fullName>
                </value>
                <value>
                    <fullName>Monofibra esterno</fullName>
                </value>
                <value>
                    <fullName>Borchia già installata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Tipo_di_intervento_aggiuntivo__c</fullName>
        <label>Tipo di intervento aggiuntivo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nessun Intervento</fullName>
                </value>
                <value>
                    <fullName>Installazione CPE</fullName>
                </value>
                <value>
                    <fullName>Ribaltamento Impianto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Tipologia_Apparato__c</fullName>
        <label>Tipologia Apparato</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipologia_Servizio__c</fullName>
        <label>Tipologia Servizio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Verifica_apparato_cliente__c</fullName>
        <label>Verifica apparato cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_from_Mail__c</fullName>
        <label>Email from Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_GIS_SCALA_PALAZZINA__c</fullName>
        <label>ID_GIS_SCALA_PALAZZINA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Sede_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sede Master</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Case)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interfaccia_CPE__c</fullName>
        <label>Interfaccia CPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invia_a__c</fullName>
        <label>Invia a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assurance</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAtt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAtt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviato Operatore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMassive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMassive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunghezza_tratta_seconda_via_m_NC__c</fullName>
        <formula>PO_Cavo_esistente_2_via_m_NC__c +  PO_Posa_nuovo_cavo_2_via_m_NC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta seconda via (m) NC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Rif__c</fullName>
        <label>NS. Rif.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_from_Email__c</fullName>
        <label>Name From Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota__c</fullName>
        <label>Nota</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note_Cliente__c</fullName>
        <label>Note Cliente</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Sospensione_Operatore__c</fullName>
        <label>Note Sospensione Operatore</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Numero Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>